package cn.mayu.yugioh.facade.sync.home;
option java_outer_classname = "LimitProto";

message LimitEntity {
	optional string name = 1;
	repeated string forbidden = 2;
	repeated string limited = 3;
	repeated string semiLimited = 4;
}
