package cn.mayu.yugioh.facade.sync.home;
option java_outer_classname = "SaveResultProto";

message SaveResultEntity {
	optional int32 code = 1;
	optional string msg = 2;
}
